--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,7 @@ h3 {
   margin-top: 5px;
   background:#B9D3EE;
   /*0px right, 5px botton, 5px fuzzy*/
-  box-shadow: 0px 5px 5px #9FB6CD;
+  /* box-shadow: 0px 5px 5px #9FB6CD; */
   border-left: 6px solid #1874CD; 
   position:relative;
 }
@@ -149,7 +149,7 @@ h5 {
 p {
   margin-bottom: 10px;
   margin-top: 5px;
-  line-height: 1.7em; 
+  /* line-height: 1.7em;  */
   padding-left: 20px;
   font-size: 16px;
 }
@@ -355,7 +355,7 @@ img::-moz-selection {
 
   .excerpt {
     border-left: 3px solid #12B2F8; 
-    margin: 0;
+    /* margin: 0; */
     margin-right: 10px;
     font-size: .9em;
     background-color: #FFF;
@@ -403,8 +403,8 @@ img::-moz-selection {
     margin-left: 30%; }
 
   .content-wrapper__inner {
-    /*margin: 0 10%;*/
-    margin-right: 60px;
+    margin: 0 -6%;
+    margin-right: 200px;
     padding: 50px 0; 
     /*margin: 0 auto; */
     /*width: 700px;*/
@@ -823,6 +823,9 @@ img::-moz-selection {
   }
   .post-list li {
     margin: 0 0 2.2em 0;
+    padding-top: 15px;
+    padding-bottom: 10px;
+    padding-right: 10px;
     float: left;
     width: 100%;
     border-radius: 8px;
