--- a/css/main.css
+++ b/css/main.css
@@ -149,7 +149,7 @@ h5 {
 p {
   margin-bottom: 10px;
   margin-top: 5px;
-  /* line-height: 1.7em;  */
+  line-height: 1.7em; 
   padding-left: 20px;
   font-size: 16px;
 }
