modify dashang png

--- a/css/main.css
+++ b/css/main.css
@@ -413,7 +413,7 @@ img::-moz-selection {
   .footer {
     display: block;
     padding: 2em 0 0 0;
-    margin-top: 100px;
+    margin-top: 150px;
     border-top: 1px solid #DDDDDD;
     font-size: .7em;
     color: #b3b3b3; }
@@ -452,8 +452,9 @@ img::-moz-selection {
     display: none !important; }
 
   .post-comments {
-    border-top: 1px solid #DDDDDD;
-    padding: 60px 0; }
+    /* border-top: 1px solid #DDDDDD;
+    padding: 60px 0;  */
+  }
 
   .post-meta {
     margin: 0;
