--- a/css/main.css
+++ b/css/main.css
@@ -421,8 +421,8 @@ img::-moz-selection {
   .footer__copyright {
     display: block;
     margin-bottom: .7em; 
-    text-align:center;
-    margin-top: 20px;
+    margin-top: 30px;
+    font-size: .7em;
   }
   .footer__copyright a {
     color: #a6a6a6;
