--- a/css/main.css
+++ b/css/main.css
@@ -412,11 +412,12 @@ img::-moz-selection {
 
   .footer {
     display: block;
-    padding: 2em 0 0 0;
-    margin-top: 100px;
+    padding: 1em 0 0 0;
+    margin-top: 150px;
     border-top: 1px solid #DDDDDD;
-    font-size: .7em;
-    color: #b3b3b3; }
+    font-size: 1em;
+    color: #b3b3b3;
+  }
 
   .footer__copyright {
     display: block;
